VQ-2469 API to Initiate a Claim

--- a/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.html
+++ b/src/app/features/lms/ind/components/claims/components/claims-initiation/claims-initiation.component.html
@@ -16,6 +16,7 @@
         <app-death-claims
           [claimClients]="claimClients$"
           [causationTypes]="causationTypes$"
+          [selectedPolicy]="selectedPolicy"
         >
         </app-death-claims>
       </ng-container>
